# astroids

./: .gitignore  CMakeLists.txt  setup.sh
docs/: .ninja_deps  .ninja_log  Makefile  build.ninja  index.data  index.js  index.wasm
src/: asteroid.c  asteroid.h  audio.c  audio_manager.h  boss.c  boss.h  common.h  entity.c  entity.h  event.h  fsm.c  fsm.h  game.h  globals.h  main.c  paddle_boss.c  paddle_boss.h  player.c  player.h  pong_boss.c  pong_boss.h  weapon.c  weapon.h  world.c  world.h
src/core/: arena.c  arena.h  astring.c  astring.h  hash_trie.c  hash_trie.h  logger.c  logger.h  memory.c  memory.h  pool.c  pool.h
src/events/: event.c  platform_events.h
